# makepad

./: Cargo.toml
examples/tabbed_document_ui/: Cargo.toml  README.md
examples/tabbed_document_ui/src/: app.rs  config.rs  lib.rs  main.rs
examples/tabbed_document_ui/src/documents/: image.rs  mod.rs  text.rs  view.rs
examples/tabbed_document_ui/src/home/: mod.rs
examples/ui_zoo/src/: app.rs
libs/windows-core/src/: lib.rs
platform/src/: live_cx.rs
