[package]
name = "makepad-example-tabbed-document-ui"
version = "0.6.0"
authors = ["Dominic Clifton <me@dominicclifton.name>"]
edition = "2021"
description = "Makepad tabbed-document-ui example"
license = "MIT OR Apache-2.0"

[dependencies]
makepad-widgets = { path = "../../widgets", version = "0.6.0" }
